# RAC_Evidence

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GNN_LLM_MASTER_DESIGN.md  LICENSE  Makefile  PC_V2_IMPLEMENTATION.md  PC_V2_INDEX.md  PC_V2_QUICKSTART.md  PC_V2_SUMMARY.md  PHASE4_DIAGNOSIS.md  PHASE4_GNN_SUMMARY.md  PHASE4_PIPELINE_COMPLETE.md  PHASE4_README.md  PHASE4_STATUS_REPORT.md  README.md  check_hpo_progress.sh  environment_backup_20251128.yml  fix_cuda_environment.sh  optuna.db  phase4_status_report.py  phase4_workflow_fixed.sh  pyproject.toml
configs/: bi.yaml  bi_real.yaml  calibrate.yaml  ce_pc.yaml  ce_pc_bge.yaml  ce_pc_real.yaml  ce_pc_real_fast.yaml  ce_pc_v2.yaml  ce_sc.yaml  ce_sc_bge.yaml  ce_sc_real.yaml  dataset.yaml  evaluate.yaml  evidence_reranker.yaml  graph.yaml  graph_real.yaml  pc_v2.yaml
outputs/: real_dev_hpo_refine_final_report.json  real_dev_hpo_v2_best_params.json
scripts/: README.md  __init__.py  build_graph.py  build_heterograph.py  build_index.py  calibrate.py  eval_pc_groundtruth.py  eval_pc_v2.py  evaluate.py  evaluate_pc_v2.py  fit_pc_thresholds.py  fix_pc_labels.py  generate_criteria_groundtruth.py  generate_evidence_sentence_groundtruth.py  generate_evidence_squad.py  generate_pc_predictions.py  hpo_ce.py  infer_ce_pc.py  infer_ce_sc.py  infer_pc_v2_optimal.py  prepare_data.py  retrieve_topk.py  retriever_ft.sh  run_acceptance_checks.py  sc_5fold.sh  select_k.sh  sweep_recall.sh  sync_to_notion.py  train_bge_reranker.py  train_bi.py  train_ce_pc.py  train_ce_sc.py  train_evidence.py  train_evidence_5fold.py  train_evidence_refine.py  train_graph.py  train_hgt.py  train_pc_v2.py  verify_pc_v2_data.py
tests/: test_calibration.py  test_crossenc_io.py  test_dynamic_k.py  test_end2end_small.py  (+12 more)
(+94 files in other folders)
