[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clin-gnn-rac"
version = "0.1.0"
description = "Retrieval-augmented classification with cross-encoders, calibration, and heterogeneous GNN refinement."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ClinRAC Authors" }]
keywords = ["retrieval", "gnn", "pytorch", "hydra", "nlp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "torch==2.3.*",
  "transformers>=4.45",
  "sentence-transformers>=2.7",
  "faiss-cpu>=1.7",
  "torch-geometric>=2.5",
  "torch-scatter>=2.1",
  "torch-sparse>=0.6",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "typer>=0.12",
  "rich>=13.7",
  "tqdm>=4.66",
  "pydantic>=2.7",
  "pandas>=2.1",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "mlflow>=2.8",
  "optuna>=3.4",
  "peft>=0.11",
  "notion-client>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
  "black>=24.3",
  "isort>=5.13",
  "mypy>=1.10",
  "pre-commit>=3.7",
]
retrieval = [
  "FlagEmbedding>=1.2.10",
  "pyserini>=0.20.0",
  "nltk>=3.8",
  "scipy>=1.11",
]

[project.scripts]
clinrac = "Project.cli.app:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["Project*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
